app_controllers/infrastructure/kubernetes-deployments/services/securethebox-server/02_service-docker-desktop-securethebox-server-charles.yml

apiVersion: v1
kind: Service
metadata:
  name: securethebox-server-charles
  annotations:
    external-dns.alpha.kubernetes.io/hostname: securethebox-server-charles.docker-desktop.securethebox.us
spec:
  selector:
    app: securethebox-server-charles
  ports:
  - name: http
    targetPort: 5000
    port: 5000
